feat: add deployment workflow

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- Header Area -->
     <header></header>
     <!-- Main Area -->
-    <main></main>
+    <main>
+      <h1>My Amazing Portfolio</h1>
+    </main>
   </body>
 </html>
